--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@react-email/components": "^0.0.25",
     "framer-motion": "^11.11.8",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-type-animation": "^3.2.0",
     "resend": "^4.0.0"
