--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-type-animation": "^3.2.0",
-    "resend": "^4.0.0"
+    "resend": "^4.0.0",
+    "sweetalert2": "^11.14.4"
   },
   "devDependencies": {
     "eslint": "^8",
